--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,29 @@ tabulate = "^0.9.0"
 dm-tree = "^0.1.8"
 scikit-image = "^0.21.0"
 lz4 = "^4.3.2"
+tensorflow-probability = "^0.20.1"
+torch = "^2.0.1+cpu"
 
+
+[[tool.poetry.source]]
+name = "torch"
+url = "https://download.pytorch.org/whl/cpu"
+default = false
+secondary = false
+
+
+[[tool.poetry.source]]
+name = "torchvision"
+url = "https://download.pytorch.org/whl/cpu"
+default = false
+secondary = false
+
+
+[[tool.poetry.source]]
+name = "torchaudio"
+url = "https://download.pytorch.org/whl/cpu"
+default = false
+secondary = false
 
 [build-system]
 requires = ["poetry-core"]
