--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,11 @@ scikit-image = "^0.21.0"
 lz4 = "^4.3.2"
 tensorflow-probability = "^0.20.1"
 # finplot = "^1.9.2"
+icecream = "^2.1.3"
+static-frame = "^2.0.1"
+mlflow = "^2.8.1"
+bayesian-optimization = "^1.4.3"
+optuna = "^3.4.0"
 
 
 [build-system]
@@ -39,6 +44,8 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 install-torch = "pip install torch==2.0.1+cpu torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html"
+install-torch-forced = "pip install --force-reinstall --no-deps torch==2.1.0+cpu torchvision torchaudio -f https://download.pytorch.org/whl/torch_stable.html"
+install-sb = "pip install stable-baselines3==2.0.0"
 pip-list = "pip list"
 pip-upgrade = "pip install --upgrade pip"
 
