--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ static-frame = "^2.0.1"
 mlflow = "^2.8.1"
 bayesian-optimization = "^1.4.3"
 optuna = "^3.4.0"
+typer = "^0.12.5"
 
 
 [build-system]
